Changed Merch Section

--- a/index.html
+++ b/index.html
@@ -925,7 +925,13 @@
       <h2>Merch Store</h2>
       <div class="grid cols-3">
         <div class="card product">
-          <div class="img"></div>
+          <img
+            class="img"
+            src="images/merch/Clash-of-the-Titans-T-Shirt_750x.webp"
+            alt="Clash of the Titans tee"
+            loading="lazy"
+            decoding="async"
+          />
           <div>
             <h3>Clash Tee</h3>
             <div class="price">$29.99</div>
@@ -937,7 +943,7 @@
           <div>
             <h3>Decals</h3>
             <div class="price">Coming Soon!</div>
-            <div class="row"><a class="btn primary" aria-disabled="true" href="#">Add to Cart</a></div>
+            <div class="row"><a class="btn primary" aria-disabled="true" href="#">Purchase</a></div>
           </div>
         </div>
       </div>
