--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Showcase classes. Real payouts. Big energy. Bring your best and take home the glory.</p>
         <div class="buttons">
           <a class="btn primary" href="#registration">Register Now</a>
-          <a class="btn" href="#classes">View Classes</a>
+          <a class="btn primary primary-dim" href="racer-vendor.html?event=round-1#passes">Buy Tickets</a>
           <a class="btn secondary" href="#schedule">Next Event</a>
         </div>
 
@@ -464,15 +464,17 @@
           <a class="btn primary" href="rebate.html">Learn More</a>
           <a class="btn" href="#contact">Questions? Contact Us</a>
         </div>
+        <p class="muted"><strong>Rebate is only applicable to registered racers.</strong></p>
         <p class="muted">Purchases must be made within 30 days before or 30 days after the event.</p>
       </div>
 
       <div class="grid cols-3">
         <div class="card">
           <h3>Lil' Titans Tech Card</h3>
-          <p><span class="price">$125</span> per event</p>
+          <p><span class="price">$125</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/lil-titans-registration">Buy Entry</a>
+            <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45769541025932">Buy Points Membership</a>
             <a class="btn" href="classes/lil-titans.html">Rules</a>
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
@@ -480,7 +482,7 @@
 
         <div class="card">
           <h3>Rising Titans Tech Card</h3>
-          <p><span class="price">$125</span> per event</p>
+          <p><span class="price">$125</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/rising-titans-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629264953484">Buy Points Membership</a>
@@ -491,7 +493,7 @@
 
         <div class="card">
           <h3>4.20'ish Tech Card</h3>
-          <p><span class="price">$375</span> per event</p>
+          <p><span class="price">$350</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-20ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629264986252">Buy Points Membership</a>
@@ -502,7 +504,7 @@
 
         <div class="card">
           <h3>4.50'ish Tech Card</h3>
-          <p><span class="price">$350</span> per event</p>
+          <p><span class="price">$350</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-50ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265019020">Buy Points Membership</a>
@@ -513,7 +515,7 @@
 
         <div class="card">
           <h3>4.90'ish Tech Card</h3>
-          <p><span class="price">$350</span> per event</p>
+          <p><span class="price">$300</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-90ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265051788">Buy Points Membership</a>
@@ -524,7 +526,7 @@
 
         <div class="card">
           <h3>5.30'ish Tech Card</h3>
-          <p><span class="price">$325</span> per event</p>
+          <p><span class="price">$300</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/5-30ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265084556">Buy Points Membership</a>
@@ -535,7 +537,7 @@
 
         <div class="card">
           <h3>10.5 Tech Card</h3>
-          <p><span class="price">$375</span> per event</p>
+          <p><span class="price">$350</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/10-5-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265117324">Buy Points Membership</a>
@@ -546,7 +548,7 @@
 
         <div class="card">
           <h3>N/T 275 Drag Radial Tech Card</h3>
-          <p><span class="price">$375</span> per event</p>
+          <p><span class="price">$375</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/275-drag-radial-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265150092">Buy Points Membership</a>
@@ -557,7 +559,7 @@
 
         <div class="card">
           <h3>Outlaw 10.5 Tech Card</h3>
-          <p><span class="price">$425</span> per event</p>
+          <p><span class="price">$425</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-10-5-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265182860">Buy Points Membership</a>
@@ -568,7 +570,7 @@
 
         <div class="card">
           <h3>N/T Outlaw 275 Drag Radial Tech Card</h3>
-          <p><span class="price">$425</span> per event</p>
+          <p><span class="price">$425</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-n-t-275-drag-radial-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265215628">Buy Points Membership</a>
@@ -579,7 +581,7 @@
 
         <div class="card">
           <h3>Titans Rage - N/T 275 Nitrous Brawl Tech Card</h3>
-          <p><span class="price">$425</span> per event</p>
+          <p><span class="price">$425</span> (Does Not Include Driver Admission)</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/titans-rage-n-t-275-nitrous-brawl-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265248396">Buy Points Membership</a>
@@ -610,7 +612,7 @@
           </div>
           <a
             class="btn primary schedule-ticket-btn"
-            href="events/round-1.html#tickets"
+            href="racer-vendor.html?event=round-1#passes"
           >Buy Tickets</a>
         </div>
 
@@ -640,7 +642,7 @@
           </div>
         </div>
 
-        <div class="schedule-item schedule-has-under-btn">
+        <div class="schedule-item">
           <div class="schedule-card">
             <div class="meta">
               <div>
@@ -651,10 +653,6 @@
             </div>
             <a class="btn" href="events/round-4.html">Event Page</a>
           </div>
-          <a
-            class="btn primary schedule-ticket-btn"
-            href="events/round-4.html#tickets"
-          >Buy Tickets</a>
         </div>
 
         <div class="schedule-item">
@@ -670,7 +668,7 @@
           </div>
         </div>
 
-        <div class="schedule-item schedule-has-under-btn">
+        <div class="schedule-item">
           <div class="schedule-card">
             <div class="meta">
               <div>
@@ -681,10 +679,6 @@
             </div>
             <a class="btn" href="events/round-6.html">Event Page</a>
           </div>
-          <a
-            class="btn primary schedule-ticket-btn"
-            href="events/round-6.html#tickets"
-          >Buy Tickets</a>
         </div>
 
         <div class="schedule-item">
@@ -735,10 +729,10 @@
   <section id="media">
     <div class="container">
       <h2>Past Races</h2>
-      <p class="lead">Dedicated pages for each round with photos, videos, ladders, and results.</p>
+      <p class="lead">Dedicated pages for each race with photos, videos, ladders, and results.</p>
 
       <div class="card" data-points-race-index="0">
-        <h3 data-role="race-title">Round 1 • Track Name • City, ST • Mar 14–15</h3>
+        <h3 data-role="race-title">Race 1 • Track Name • City, ST • Mar 14–15</h3>
         <div class="grid cols-2">
           <div>
             <h4>Highlights</h4>
@@ -748,11 +742,11 @@
                 data-manifest="assets/data/2025photos/round-1.json"
                 data-video-href="https://www.youtube.com/watch?v=mBqSwAeWS-o"
                 data-video-thumb="https://i.ytimg.com/vi/mBqSwAeWS-o/mqdefault.jpg"
-                aria-label="Round 1 gallery"
+                aria-label="Race 1 gallery"
               >
                 <button class="gallery-nav prev" type="button" aria-label="Scroll photos left">◀</button>
                 <div class="gallery-viewport" tabindex="0">
-                  <div class="gallery-track" role="list" aria-label="Round 1 photo thumbnails"></div>
+                  <div class="gallery-track" role="list" aria-label="Race 1 photo thumbnails"></div>
                 </div>
                 <button class="gallery-nav next" type="button" aria-label="Scroll photos right">▶</button>
               </div>
@@ -775,7 +769,7 @@
       </div>
 
       <div class="card" data-points-race-index="1">
-        <h3 data-role="race-title">Round 2 • Track Name • May 9–10</h3>
+        <h3 data-role="race-title">Race 2 • Track Name • May 9–10</h3>
         <div class="grid cols-2">
           <div>
             <h4>Highlights</h4>
@@ -785,11 +779,11 @@
                 data-manifest="assets/data/2025photos/round-2.json"
                 data-video-href="https://www.youtube.com/watch?v=mWpUvxAu_S4"
                 data-video-thumb="https://i.ytimg.com/vi/mWpUvxAu_S4/mqdefault.jpg"
-                aria-label="Round 2 gallery"
+                aria-label="Race 2 gallery"
               >
                 <button class="gallery-nav prev" type="button" aria-label="Scroll photos left">◀</button>
                 <div class="gallery-viewport" tabindex="0">
-                  <div class="gallery-track" role="list" aria-label="Round 2 photo thumbnails"></div>
+                  <div class="gallery-track" role="list" aria-label="Race 2 photo thumbnails"></div>
                 </div>
                 <button class="gallery-nav next" type="button" aria-label="Scroll photos right">▶</button>
               </div>
@@ -812,7 +806,7 @@
       </div>
 
       <div class="card" data-points-race-index="2">
-        <h3 data-role="race-title">Round 3 • Track Name • Date</h3>
+        <h3 data-role="race-title">Race 3 • Track Name • Date</h3>
         <div class="grid cols-2">
           <div>
             <h4>Highlights</h4>
@@ -822,11 +816,11 @@
                 data-manifest="assets/data/2025photos/round-3.json"
                 data-video-href="https://www.youtube.com/watch?v=FynFfOVT__Q"
                 data-video-thumb="https://i.ytimg.com/vi/FynFfOVT__Q/mqdefault.jpg"
-                aria-label="Round 3 gallery"
+                aria-label="Race 3 gallery"
               >
                 <button class="gallery-nav prev" type="button" aria-label="Scroll photos left">◀</button>
                 <div class="gallery-viewport" tabindex="0">
-                  <div class="gallery-track" role="list" aria-label="Round 3 photo thumbnails"></div>
+                  <div class="gallery-track" role="list" aria-label="Race 3 photo thumbnails"></div>
                 </div>
                 <button class="gallery-nav next" type="button" aria-label="Scroll photos right">▶</button>
               </div>
@@ -849,15 +843,15 @@
       </div>
 
       <div class="card" data-points-race-index="3">
-        <h3 data-role="race-title">Round 4 • Track Name • Date</h3>
+        <h3 data-role="race-title">Race 4 • Track Name • Date</h3>
         <div class="grid cols-2">
           <div>
             <h4>Highlights</h4>
             <div class="media-strip">
-              <div class="thumb-gallery" data-manifest="assets/data/2025photos/round-4.json" aria-label="Round 4 gallery">
+              <div class="thumb-gallery" data-manifest="assets/data/2025photos/round-4.json" aria-label="Race 4 gallery">
                 <button class="gallery-nav prev" type="button" aria-label="Scroll photos left">◀</button>
                 <div class="gallery-viewport" tabindex="0">
-                  <div class="gallery-track" role="list" aria-label="Round 4 photo thumbnails"></div>
+                  <div class="gallery-track" role="list" aria-label="Race 4 photo thumbnails"></div>
                 </div>
                 <button class="gallery-nav next" type="button" aria-label="Scroll photos right">▶</button>
               </div>
@@ -880,7 +874,7 @@
       </div>
 
       <div class="card" data-points-race-index="4">
-        <h3 data-role="race-title">Round 5 • Track Name • Date</h3>
+        <h3 data-role="race-title">Race 5 • Track Name • Date</h3>
         <div class="grid cols-2">
           <div>
             <h4>Highlights</h4>
@@ -890,11 +884,11 @@
                 data-manifest="assets/data/2025photos/round-5.json"
                 data-video-href="https://www.youtube.com/watch?v=H6YiE_hJdEs"
                 data-video-thumb="https://i.ytimg.com/vi/H6YiE_hJdEs/mqdefault.jpg"
-                aria-label="Round 5 gallery"
+                aria-label="Race 5 gallery"
               >
                 <button class="gallery-nav prev" type="button" aria-label="Scroll photos left">◀</button>
                 <div class="gallery-viewport" tabindex="0">
-                  <div class="gallery-track" role="list" aria-label="Round 5 photo thumbnails"></div>
+                  <div class="gallery-track" role="list" aria-label="Race 5 photo thumbnails"></div>
                 </div>
                 <button class="gallery-nav next" type="button" aria-label="Scroll photos right">▶</button>
               </div>
@@ -967,7 +961,28 @@
         </div>
         <div>
           <h3>Follow</h3>
-          <p><a href="https://www.instagram.com/official_cott/">Instagram</a> · <a href="https://www.facebook.com/profile.php?id=61573287809581">Facebook</a></p>
+          <div class="social-links" aria-label="Social media">
+            <a class="social-link" href="https://www.instagram.com/official_cott/" aria-label="Instagram">
+              <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                <path d="M16 11.37a4 4 0 1 1-2.17-2.17A4 4 0 0 1 16 11.37z"></path>
+                <circle cx="17.5" cy="6.5" r="1"></circle>
+              </svg>
+              <span class="sr-only">Instagram</span>
+            </a>
+            <a class="social-link" href="https://www.facebook.com/profile.php?id=61573287809581" aria-label="Facebook">
+              <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+              </svg>
+              <span class="sr-only">Facebook</span>
+            </a>
+            <a class="social-link" href="https://www.tiktok.com/@official_cott" aria-label="TikTok">
+              <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="currentColor">
+                <path d="M12.53.02C13.84 0 15.14.01 16.44 0c.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.10-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z"/>
+              </svg>
+              <span class="sr-only">TikTok</span>
+            </a>
+          </div>
         </div>
       </div>
       <p class="copyright">© <span id="year"></span> Clash of the Titans • A Nitrous Outlet Series</p>
@@ -997,20 +1012,6 @@
           </figcaption>
         </figure>
         <button class="btn lightbox-nav lightbox-next" type="button" data-action="next" aria-label="Next photo">▶</button>
-      </div>
-    </div>
-
-    <!-- Ticket type picker (Schedule > Buy Tickets) -->
-    <div class="ticket-modal" id="ticket-modal" hidden aria-hidden="true">
-      <div class="ticket-modal-backdrop" data-action="close" aria-hidden="true"></div>
-      <div class="ticket-modal-dialog" role="dialog" aria-modal="true" aria-labelledby="ticket-modal-title">
-        <button class="btn ticket-modal-close" type="button" data-action="close" aria-label="Close ticket options">Close ✕</button>
-        <h3 id="ticket-modal-title">Choose your pass</h3>
-        <p class="muted" id="ticket-modal-subtitle">Select a ticket type.</p>
-        <div class="ticket-modal-actions">
-          <a class="btn primary" id="ticket-modal-ga" href="#">General Admission</a>
-          <a class="btn secondary" id="ticket-modal-rv" href="racer-vendor.html#passes">Racer/Vendor Passes</a>
-        </div>
       </div>
     </div>
 
