--- a/racer-vendor.html
+++ b/racer-vendor.html
@@ -49,6 +49,17 @@
       </div>
 
       <div class="grid cols-2" style="margin-top:16px">
+        <article class="card" id="general-admission">
+          <div class="row between">
+            <h3>General Admission</h3>
+            <span class="tag">Spectator</span>
+          </div>
+          <p class="muted">Get your day, weekend, or VIP passes for the event!</p>
+          <div class="row">
+            <a class="btn primary" id="ga-pass-link" href="https://nitrousoutlet.com/products/general-admission" aria-disabled="false">Purchase</a>
+          </div>
+        </article>
+
         <article class="card">
           <div class="row between">
             <h3>Weekend Tech Card (Test &amp; Tune)</h3>
