--- a/rebate.html
+++ b/rebate.html
@@ -53,6 +53,7 @@
 
         <h3>Program Rules</h3>
         <ul>
+          <li>Rebate is only applicable to registered racers</li>
           <li>Credits are issued 30 days after the completed race event</li>
           <li>Purchases must be made within 30 days before or 30 days after the event</li>
           <li>One receipt per class, per event</li>
